# RAGent

./: .dockerignore  .env.example  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
agents/: base.py  extractor_agent.py  intake_agent.py  orchestrator.py  rag_agent.py
api/: dependencies.py  routes.py  sse.py
mcp_server/: client.py  schemas.py  server.py  types.py
mcp_server/servers/: __init__.py  doc_store_server.py  vector_db_server.py  web_search_server.py
models/: documents.py  extractions.py  results.py  stream.py
rag/: chunker.py  embedder.py  retriever.py
utils/: document_parser.py
