[project]
name = "ragent"
version = "0.1.0"
description = "Multi-Agent Document Intelligence Pipeline with MCP and Typed RAG"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pydantic-ai[gemini,groq,mistral]",
    "mcp",
    "qdrant-client",
    "fastapi",
    "uvicorn",
    "httpx",
    "logfire",
    "pypdf",
    "python-docx",
    "beautifulsoup4",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-asyncio",
]

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "llama_index.*",
    "pypdf",
    "docx",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
